--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="saiful, saiful akbar, cindy, cindy nadya, wedding website, wedding invitation" />
 
     <!-- Title -->
-    <title>TMis XV - Grace Cervera</title>
+    <title>Mis XV - Grace Cervera</title>
 
     <!-- Android -->
     <meta name="theme-color" content="#39251B" />
@@ -68,7 +68,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mis XV - Grace Cervera" />
     <meta property="og:description" content="01 de Junio, 2024" />
-    <meta property="og:site_name" content="Saiful & Cindy" />
+    <meta property="og:site_name" content="Grace Cervera" />
     <meta property="og:url" content="https://saifulcindy.vercel.app" />
     <meta property="og:image" content="https://saifulcindy.vercel.app/assets/images/logo/banner.webp" />
     <meta property="og:image:width" content="2008" />
