--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="https://saifulcindy.vercel.app" />
+    <meta name="twitter:url" content="https://mis-xv-grace-cervera.vercel.app/" />
     <meta name="twitter:title" content="TMis XV - Grace Cervera" />
     <meta name="twitter:description" content="01 de Junio, 2024" />
-    <meta name="twitter:image" content="https://saifulcindy.vercel.app/assets/images/logo/banner.webp" />
+    <meta name="twitter:image" content="https://mis-xv-grace-cervera.vercel.app//assets/images/logo/banner.webp" />
     <meta name="twitter:creator" content="@Saiful_akbar13" />
 
     <!-- Open Graph -->
@@ -69,8 +69,8 @@
     <meta property="og:title" content="Mis XV - Grace Cervera" />
     <meta property="og:description" content="01 de Junio, 2024" />
     <meta property="og:site_name" content="Grace Cervera" />
-    <meta property="og:url" content="https://saifulcindy.vercel.app" />
-    <meta property="og:image" content="https://saifulcindy.vercel.app/assets/images/logo/banner.webp" />
+    <meta property="og:url" content="https://mis-xv-grace-cervera.vercel.app/" />
+    <meta property="og:image" content="https://mis-xv-grace-cervera.vercel.app//assets/images/logo/banner.webp" />
     <meta property="og:image:width" content="2008" />
     <meta property="og:image:height" content="2434" />
 
